# iwd-tool-stat-balancer

./: Cargo.toml  README.md  index.js  planning
config/: index.js  mutation.js  requirements.js  stats.js
genetic/: buildNode.js  evolveNode.js  index.js  setNodeFitness.js
src/: indexIwd.js  main.rs
src/config/: index.json  mod.rs  mutation.json  mutation.rs  requirements.json  requirements.rs  stats.json  stats.rs
src/genetic/: build_node.rs  evolve_node.rs  logCharacterStats.js  mod.rs  produceOffspring.js  produce_offspring.rs  set_node_fitness.rs
src/genetic/node/: index.js  mod.rs
